# pdf2xls

./: pyproject.toml  requirements.txt
doc/detailed-design/: conf.py
src/pdf2xls/: pdf2xls.py  version.py
