[build-system]
requires = ["setuptools", "setuptools-scm", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2xls"
version = "0.1.0"
description = "convert pdf files to excel"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Achim Brunner", email = "achim.brunner@gmx.de" }
]
license = {text = "BSD 3-Clause"}
classifiers = [
    "License :: OSI Approved :: BSD 3-Clause",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.13"
]

dependencies = [
    "toml>=0.10.2",
    "pdfplumber>=0.11.4",
    "openpyxl>=3.1.5"
]

[project.optional-dependencies]
test = [
  "pytest > 5.0.0",
  "pytest-cov[all]"
]

[project.urls]
documentation = "https://github.com/achim0x/pdf2xls/"
repository = "https://github.com/achim0x/pdf2xls/"
tracker = "https://github.com/achim0x/pdf2xls"

[project.scripts]
pdf2xls= "pdf2xls.pdf2xls:main"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
